manifest/base/bhasai/bff/service-bff.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  selector:
    app.kubernetes.io/name: bff
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
