manifest/base/bhasai/bff/ingress-bff.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "bff.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bff
            port:
              number: 80
